# tauri-vue-tailwind-template

./: .gitignore  LICENSE  README.md  biome.json  index.html  package.json  pyproject.toml  start.py  vite.config.ts
.github/: dependabot.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/assets/: main.css
src/components/: AboutModel.vue  FooterBar.vue  Nav.vue  WindowControls.vue
src/components/modal/: AboutModal.vue
src/components/model/: AboutModel.vue
src/components/nav/: Nav.vue  WindowControls.vue
