[project]
name = "tauri-vue-tailwind-template"
version = "0.1.0"
description = "Setup scipt for Tauri, Vue and Tailwind to create a new project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "pydantic>=2.10.6",
    "rich>=13.9.4",
]

[dependency-groups]
dev = [
    "ruff>=0.9.6",
]

[tool.ruff]
line-length = 120
